# rust-android-ios-poc

./: .gitignore
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/amalagation/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/amalagation/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  random_module.cpp
cpp_playground/: CMakeLists.txt  main.cpp
ios/: Amalagation-Bridging-Header.h  NativeC.c  NativeC.h
ios/Amalagation/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/Amalagation.xcodeproj/: project.pbxproj
ios/Amalagation.xcodeproj/project.xcworkspace/xcuserdata/srotolante.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Amalagation.xcodeproj/xcuserdata/srotolante.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/Amalagation.xcodeproj/xcuserdata/srotolante.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Amalagation/Base.lproj/: Main.storyboard
ios/AmalagationTests/: AmalagationTests.swift
ios/AmalagationUITests/: AmalagationUITests.swift  AmalagationUITestsLaunchTests.swift
random_rust_pkg/: Cargo.toml  install_targets
random_rust_pkg/src/: lib.rs
(+1 files in other folders)
